--- a/templates/changelog.html
+++ b/templates/changelog.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri May 16 2025 20:13:53 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="6822c54974afef131c86bff7" data-wf-site="6822c54974afef131c86bfa5" lang="en">
-<head>
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri May 16 2025 20:13:53 GMT+0000 (Coordinated Universal Time)  --><html data-wf-page="6822c54974afef131c86bff7" data-wf-site="6822c54974afef131c86bfa5" lang="en"><head>
   <meta charset="utf-8">
   <title>Changelog - Sport Club</title>
   <meta content="Changelog - Sport Club" property="og:title">
@@ -18,6 +16,25 @@
   <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="../images/webclip.png" rel="apple-touch-icon">
   <meta name="robots" content="noindex">
+  <script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
+  <script>
+    Weglot.initialize({
+        api_key: 'wg_951e1f37be4f7f34083b855332ae37da6'
+    });
+  </script>
+  
+
+  <style>
+    /* Hide Weglot default widget */
+    .weglot-container, 
+    .country-selector,
+    .wg-drop {
+      display: none !important;
+      visibility: hidden !important;
+      opacity: 0 !important;
+      pointer-events: none !important;
+    }
+  </style>
 </head>
 <body>
   <div data-animation="over-left" class="navbar-absolute about-us-navbar w-nav" data-easing2="ease" data-easing="ease" data-collapse="medium" role="banner" data-no-scroll="1" data-duration="400" data-doc-height="1">
@@ -107,57 +124,18 @@
         </div>
       </nav>
       <div class="header-right-block-wrapper">
-        <div class="collection-list-wrapper-6 w-dyn-list">
-          <div role="list" class="w-dyn-items">
-            <div role="listitem" class="w-dyn-item">
-              <a href="#" class="next-match-link w-inline-block">
-                <div class="live-icon"><img loading="lazy" src="../images/Group-1.svg" alt="">
-                  <p class="nav-item-title upper">NEXT</p>
-                </div>
-                <p class="nav-link w-dyn-bind-empty"></p>
-              </a>
-            </div>
-          </div>
-          <div class="empty-state-4 w-dyn-empty">
-            <div>No items found.</div>
-          </div>
-        </div>
-        <div class="cart-wrapper">
-          <div data-open-product="" data-wf-cart-type="rightSidebar" data-wf-cart-query="" data-wf-page-link-href-prefix="" class="w-commerce-commercecartwrapper" data-node-type="commerce-cart-wrapper">
-            <a class="w-commerce-commercecartopenlink cart-button w-inline-block" role="button" aria-haspopup="dialog" aria-label="Open cart" data-node-type="commerce-cart-open-link" href="#"><svg class="w-commerce-commercecartopenlinkicon nav-bar-absolute-icon" width="17px" height="17px" viewbox="0 0 17 17">
-                <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                  <path d="M2.60592789,2 L0,2 L0,0 L4.39407211,0 L4.84288393,4 L16,4 L16,9.93844589 L3.76940945,12.3694378 L2.60592789,2 Z M15.5,17 C14.6715729,17 14,16.3284271 14,15.5 C14,14.6715729 14.6715729,14 15.5,14 C16.3284271,14 17,14.6715729 17,15.5 C17,16.3284271 16.3284271,17 15.5,17 Z M5.5,17 C4.67157288,17 4,16.3284271 4,15.5 C4,14.6715729 4.67157288,14 5.5,14 C6.32842712,14 7,14.6715729 7,15.5 C7,16.3284271 6.32842712,17 5.5,17 Z" fill="currentColor" fill-rule="nonzero"></path>
-                </g>
-              </svg>
-              <div style="display:none" data-count-hide-rule="empty" class="w-commerce-commercecartopenlinkcount cart-quantity">0</div>
-            </a>
-            <div style="display:none" class="w-commerce-commercecartcontainerwrapper w-commerce-commercecartcontainerwrapper--cartType-rightSidebar" data-node-type="commerce-cart-container-wrapper">
-              <div data-node-type="commerce-cart-container" role="dialog" class="w-commerce-commercecartcontainer cart-container">
-                <div class="w-commerce-commercecartheader cart-header">
-                  <h4 class="w-commerce-commercecartheading">Your Cart</h4>
-                  <a class="w-commerce-commercecartcloselink w-inline-block" role="button" aria-label="Close cart" data-node-type="commerce-cart-close-link"><svg class="icon" width="16px" height="16px" viewbox="0 0 16 16">
-                      <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                        <g fill-rule="nonzero" fill="#333333">
-                          <polygon points="6.23223305 8 0.616116524 13.6161165 2.38388348 15.3838835 8 9.76776695 13.6161165 15.3838835 15.3838835 13.6161165 9.76776695 8 15.3838835 2.38388348 13.6161165 0.616116524 8 6.23223305 2.38388348 0.616116524 0.616116524 2.38388348 6.23223305 8"></polygon>
-                        </g>
-                      </g>
-                    </svg></a>
-                </div>
-                <div class="w-commerce-commercecartformwrapper">
-                  <form style="display:none" class="w-commerce-commercecartform" data-node-type="commerce-cart-form">
-                    <script type="text/x-wf-template" id="wf-template-eb54e36d-4999-063f-fcc2-0dd603289f49"></script>
-                    <div class="w-commerce-commercecartlist cart-list" data-wf-collection="database.commerceOrder.userItems" data-wf-template-id="wf-template-eb54e36d-4999-063f-fcc2-0dd603289f49"></div>
-                    <div class="w-commerce-commercecartfooter cart-footer">
-                      <div aria-atomic="true" aria-live="polite" class="w-commerce-commercecartlineitem">
-                        <div>Subtotal</div>
-                        <div class="w-commerce-commercecartordervalue"></div>
-                      </div>
+    <div class="language-switcher">
+      <a href="#" data-lang="en" class="active">EN</a>
+      <a href="#" data-lang="ar">AR</a>
+    </div>
+        
+        
                       <div>
                         <div data-node-type="commerce-cart-quick-checkout-actions" class="web-payments">
                           <a data-node-type="commerce-cart-apple-pay-button" role="button" aria-label="Apple Pay" aria-haspopup="dialog" style="background-image:-webkit-named-image(apple-pay-logo-white);background-size:100% 50%;background-position:50% 50%;background-repeat:no-repeat" class="w-commerce-commercecartapplepaybutton apple-pay" tabindex="0">
                             <div></div>
                           </a>
-                          <a data-node-type="commerce-cart-quick-checkout-button" role="button" tabindex="0" aria-haspopup="dialog" style="display:none" class="w-commerce-commercecartquickcheckoutbutton"><svg class="w-commerce-commercequickcheckoutgoogleicon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="16" height="16" viewbox="0 0 16 16">
+                          <a data-node-type="commerce-cart-quick-checkout-button" role="button" tabindex="0" aria-haspopup="dialog" style="display:none" class="w-commerce-commercecartquickcheckoutbutton"><svg class="w-commerce-commercequickcheckoutgoogleicon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="16" height="16" viewBox="0 0 16 16">
                               <defs>
                                 <polygon id="google-mark-a" points="0 .329 3.494 .329 3.494 7.649 0 7.649"></polygon>
                                 <polygon id="google-mark-c" points=".894 0 13.169 0 13.169 6.443 .894 6.443"></polygon>
@@ -176,7 +154,7 @@
                                 </mask>
                                 <path fill="#EA4335" d="M0.894,4.3291 L3.478,6.4431 C4.113,4.5611 5.843,3.1671 7.889,3.1671 C9.018,3.1451 10.102,3.5781 10.912,4.3671 L13.169,2.0781 C11.733,0.7231 9.85,-0.0219 7.889,0.0001 C4.941,0.0001 2.245,1.6791 0.894,4.3291" mask="url(#google-mark-d)"></path>
                               </g>
-                            </svg><svg class="w-commerce-commercequickcheckoutmicrosofticon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewbox="0 0 16 16">
+                            </svg><svg class="w-commerce-commercequickcheckoutmicrosofticon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
                               <g fill="none" fill-rule="evenodd">
                                 <polygon fill="#F05022" points="7 7 1 7 1 1 7 1"></polygon>
                                 <polygon fill="#7DB902" points="15 7 9 7 9 1 15 1"></polygon>
@@ -190,25 +168,21 @@
                         <a href="../checkout.html" value="Continue to Checkout" class="w-commerce-commercecartcheckoutbutton primary-button" data-loading-text="Hang Tight..." data-node-type="cart-checkout-button">Continue to Checkout</a>
                       </div>
                     </div>
-                  </form>
-                  <div class="w-commerce-commercecartemptystate">
-                    <div aria-label="This cart is empty" aria-live="polite">No items found.</div>
+                  
+                  
                   </div>
                   <div aria-live="assertive" style="display:none" data-node-type="commerce-cart-error" class="w-commerce-commercecarterrorstate nav-bar-absolute-error-state">
                     <div class="error-message-red w-cart-error-msg" data-w-cart-quantity-error="Product is not available in this quantity." data-w-cart-general-error="Something went wrong when adding this item to the cart." data-w-cart-checkout-error="Checkout is disabled on this site." data-w-cart-cart_order_min-error="The order minimum was not met. Add more items to your cart to continue." data-w-cart-subscription_error-error="Before you purchase, please use your email invite to verify your address so we can send order updates.">Product is not available in this quantity.</div>
                   </div>
                 </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div data-w-id="ba67b287-f196-4627-29a8-f080f7e8b220" class="button-header-wrapper">
-          <a href="../contact-us.html" class="primary-button header-button w-button">Get in Touch</a>
-        </div>
-      </div>
+              
+            
+          
+        
+        
       <div class="menu-button w-nav-button"><img loading="lazy" height="16" alt="Menu icon" src="../images/menu-btn.svg" class="image-burger"></div>
-    </div>
-  </div>
+    
+  
   <section>
     <div class="w-layout-blockcontainer full-width-container w-container">
       <div class="pages-banner schedule-banner">
@@ -282,41 +256,15 @@
       <div class="footer-bottom-wrapper">
         <div class="footer-copyright">© Sport Club. All Rights Reserved . <a href="../templates/licensing.html" class="licensing-footer-link">Licensing</a>
         </div>
-        <div class="footer-rights-wrapper">
-          <div class="footer-rights">
-            <a href="https://wcopilot.com/templates" target="_blank" class="footer-copyright-link">Template</a> by <a href="https://wcopilot.com/" target="_blank" class="footer-copyright-link">wCopilot</a>
-          </div>
-          <div class="footer-rights">Powered by <a href="https://webflow.com/" target="_blank" class="footer-copyright-link">Webflow</a>
-          </div>
-        </div>
+        
       </div>
     </div>
-    <div class="promotion-labels-wrapper-to-remove">
-      <div class="promotion-label-left">
-        <div class="promotion-label-holder">
-          <div class="promotion-label-paragraph">Get Unlimited <span class="text-orange">Webflow Development and Design</span> at fraction of Cost by wCopilot</div>
-          <div class="promotion-label-buttons-wrapper">
-            <a href="https://wcopilot.com/schedule-a-demo" target="_blank" class="promotion-label-button w-inline-block">
-              <div>Schedule a Demo</div>
-            </a>
-            <a href="https://wcopilot.com/plans" target="_blank" class="promotion-label-button w-inline-block">
-              <div>View Pricing</div>
-            </a>
-          </div>
-          <div data-w-id="70b520ae-66fe-b91a-53d0-22090576c865" class="promotion-label-close"><img loading="lazy" src="../images/Close-Pop-up.svg" alt="" class="close-popup-image"></div>
-        </div>
-      </div>
-      <div class="promotion-label-right">
-        <a href="https://webflow.com/dashboard/marketplace-checkout/redirect?rtype=Template&amp;rid=66371e84a188a2ffafa46708" target="_blank" class="promotion-label-buy-this-template w-inline-block"><img width="16" height="16" alt="webflow icon" src="../images/icon-white.svg" loading="lazy" class="btn-icon">
-          <div>Buy this Template</div>
-        </a>
-        <a href="https://bit.ly/4bpnCWN" target="_blank" class="promotion-label-all-templates w-inline-block"><img loading="lazy" src="../images/wCopilot.svg" alt="" class="btn-icon">
-          <div>All Templates</div>
-        </a>
-      </div>
-    </div>
+    
+      
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6822c54974afef131c86bfa5" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="../js/webflow.js" type="text/javascript"></script>
-</body>
-</html>
+  <script src="js/update-nav.js" type="text/javascript"></script>
+  <script src="js/stagewise-integration.js" type="text/javascript"></script>
+
+</body></html>
