--- a/css/sports-vision-fe0d13.webflow.css
+++ b/css/sports-vision-fe0d13.webflow.css
@@ -89,7 +89,7 @@
 :root {
   --black: #0e0e0e;
   --white: white;
-  --brand: #c7f849;
+  --brand: #5ab94e;
   --white-0-55: #ffffff8c;
   --paragraph-gray: #666;
   --dark-brand-color: #95d000;
@@ -97,8 +97,9 @@
   --background-gray: #1b1b1b;
   --red: #ff3d3d;
   --light-gray: #e3e3e3;
-  --dark-gray\<deleted\|variable-e2382e90\>: #afafaf;
+  --dark-gray: #afafaf;
   --dark-olive-green: #212514;
+  --dark-color: #163a64;
 }
 
 .w-layout-blockcontainer {
@@ -2241,6 +2242,17 @@ blockquote {
   display: flex;
 }
 
+/* Center the logo properly */
+.brand.w-nav-brand {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo-sport-club {
+  margin-top: 0 !important;
+}
+
 .nav-menu-wrapper.white-theme {
   border-bottom: 1px solid var(--light-gray);
   -webkit-text-stroke-color: var(--white);
@@ -2275,7 +2287,7 @@ blockquote {
 }
 
 .prev-post-arrow {
-  color: var(--dark-gray\<deleted\|variable-e2382e90\>);
+  color: var(--dark-gray);
   margin-top: 0;
   margin-bottom: 0;
   margin-right: 25px;
@@ -2283,7 +2295,7 @@ blockquote {
 }
 
 .next-post-arrow {
-  color: var(--dark-gray\<deleted\|variable-e2382e90\>);
+  color: var(--dark-gray);
   margin-bottom: 0;
   margin-left: 25px;
   font-family: "Fa solid 900", sans-serif;
@@ -2421,7 +2433,7 @@ blockquote {
 }
 
 .paragraph-large.gray-text {
-  color: var(--white-0-55);
+  color: var(#163a64 );
 }
 
 .paragraph-large.achievement-paragraph {
@@ -3655,7 +3667,7 @@ blockquote {
 }
 
 .pages-banner.our-team-banner {
-  background-image: linear-gradient(#0000004d, #0000004d), url('../images/katrina-berban-rsaDNKpKotM-unsplash-2-1_1katrina-berban-rsaDNKpKotM-unsplash 2 (1).webp');
+  background-image: linear-gradient(#0000004d, #0000004d), url('../images/aavision/team.png');
 }
 
 .pages-banner.news-banner {
@@ -3855,8 +3867,12 @@ blockquote {
 }
 
 .logo-sport-club {
-  object-fit: cover;
-  height: 12px;
+    object-fit: contain;
+    height: 90px;
+    max-height: 60px;
+    width: auto;
+    margin-top: 0 !important;
+    margin-right: 0;
 }
 
 .logo-sport-club.footer-logo {
@@ -4076,29 +4092,29 @@ blockquote {
 }
 
 .about-us-photo-wrapper.cell-3 {
-  background-image: url('../images/logan-weaver-lgnwvr-zPHJ_7seOfA-unsplash-1.png');
+  background-image: url('../images/aavision/c3.png');
   flex: 1;
 }
 
 .about-us-photo-wrapper.cell-4 {
-  background-image: url('../images/tom-briskey-AddAnDkkovM-unsplash-1.png');
+  background-image: url('../images/aavision/c4.png');
 }
 
 .about-us-photo-wrapper.cell-5 {
-  background-image: url('../images/pavel-kononenko-Lund2ffbcUM-unsplash-1.png');
+  background-image: url('../images/aavision/c5.png');
   background-position: 0 0;
   background-size: cover;
 }
 
 .about-us-photo-wrapper.text-cell {
-  background-image: url('../images/Rectangle-1-1_1Rectangle 1 (1).webp');
+  background-image: url('../images/aavision/c1.png');
   padding: 50px 50px 170px;
 }
 
 .about-us-photo-wrapper.home-2-cell-2 {
   grid-column-gap: 16px;
   grid-row-gap: 16px;
-  background-image: url('../images/benjamin-hershey-qegSxvH9U9Y-unsplash-1.png');
+  background-image: url('../images/abenjamin-hershey-qegSxvH9U9Y-unsplash-1.png');
   background-size: cover;
   grid-template-rows: auto auto;
   grid-template-columns: 1fr 1fr;
@@ -4108,7 +4124,7 @@ blockquote {
 }
 
 .about-us-photo-wrapper.home-2-cell-3 {
-  background-image: url('../images/leio-mclaren-d3fpWcA4vyA-unsplash-1.png');
+  background-image: url('../images/aavision/c3.png');
 }
 
 .about-us-photo-wrapper.home-2-text-cell {
@@ -4371,11 +4387,11 @@ blockquote {
 }
 
 .timer-image.second-image {
-  background-image: url('../images/Rectangle-16_1Rectangle 16.webp');
+  background-image: url('../images/aavision/2.png');
 }
 
 .timer-image.first-image {
-  background-image: url('../images/Rectangle-15_1Rectangle 15.webp');
+  background-image: url('../images/aavision/1.png');
 }
 
 .timer-quick-stack {
@@ -4466,7 +4482,7 @@ blockquote {
 }
 
 .banner-photo-wrapper {
-  background-image: url('../images/Rectangle-1-1_1Rectangle 1 (1).webp');
+  background-image: url('../images/aavision/banner.png');
   background-position: 50%;
   background-size: cover;
   width: 400px;
@@ -5330,7 +5346,7 @@ blockquote {
 }
 
 .absolute-photo-wrapper {
-  background-image: url('../images/logan-weaver-lgnwvr-Iil35il081Y-unsplash-1_1logan-weaver-lgnwvr-Iil35il081Y-unsplash 1.webp');
+  background-image: url('../images/aavision/500-3632x.png');
   background-position: 50%;
   background-size: cover;
   width: 100%;
@@ -6215,7 +6231,7 @@ blockquote {
 }
 
 .about-us-mission-card {
-  background-color: var(--dark-olive-green);
+  background-color: var(--dark-olive-green,0.5);
   padding: 24px;
   position: relative;
 }
@@ -9510,7 +9526,8 @@ blockquote {
   }
 
   .logo-sport-club {
-    height: 14px;
+    height: 90px;
+    max-height: 60px;
   }
 
   .brand-color-form-block {
